01: Order Up project

--- a/content/projects/ecommerce-store.mdx
+++ b/content/projects/ecommerce-store.mdx
@@ -1,57 +1,41 @@
 ---
-  title: Ecommerce Store
-  summary: A full-stack ecommerce store built with NextJs and Stripe.
-  image: /images/projects/ecommerce-store.jpg
-  author: 'Haron Ngaira'
-  publishedAt: '2024-09-19'
+title: Food & Grocery Order App  
+summary: A full-stack food and grocery ordering app built with Next.js and Tailwind CSS.  
+image: /images/projects/order-app.webp 
+author: 'Vinter'  
+publishedAt: '2025-04-01'  
 ---
 
-This is a full-stack ecommerce store built with NextJs and Stripe. It uses the
-`@stripe/stripe-js` package to handle payments and the `@next/bundle-analyzer`
-package to analyze the bundle size.
+This is a full-stack food and grocery ordering app built with Next.js. It features real-time product browsing, cart management, and a streamlined checkout experience. The app is optimized for performance and mobile-first users, making it easy to order essentials on the go.
 
 ## Features
 
-- **Stripe Payments**: Accept payments using the Stripe API.
-- **Product Catalog**: Display products in a grid layout.
-- **Shopping Cart**: Add products to the shopping cart and checkout.
-- **User Authentication**: Allow users to sign up and log in.
-- **Order History**: View order history and track shipments.
+- **Product Listings**: Browse food and grocery items in categorized views.
+- **Search & Filter**: Quickly find products with intuitive search and filtering options.
+- **Shopping Cart**: Add multiple items to the cart and adjust quantities.
+- **Order Checkout**: Seamless checkout flow with address and payment integration.
+- **User Authentication**: Sign up, log in, and manage personal profiles.
+- **Order Tracking**: Track the status of orders in real-time.
 
 ## Technologies
 
-- **NextJs**: A React framework for building static and dynamic websites.
-- **Stripe**: A payment processing platform for online businesses.
-- **Tailwind CSS**: A utility-first CSS framework for building custom designs.
-- **Vercel**: A cloud platform for static sites and serverless functions.
+- **Next.js**: For building fast, scalable web applications.
+- **Tailwind CSS**: For responsive, utility-first styling.
+- **Prisma**: As an ORM to handle database operations.
+- **PostgreSQL**: Relational database for managing product and order data.
+- **Vercel**: Deployment platform for performance and scalability.
 
 ## Getting Started
 
-To get started with this project, you can clone the repository and install the
-dependencies:
+Clone the repository and install dependencies:
 
 ```bash
 git clone
-cd ecommerce-store
+cd food-grocery-app
 npm install
-```
-
-Once the dependencies are installed, you can run the development server:
-
-```bash
-npm run dev
-```
-
-The development server will start at `http://localhost:3000`.
 
 ## Deployment
 
-To deploy this project, you can use Vercel. You can link your GitHub repository
-to Vercel and deploy the project with a single click.
-
 ## Conclusion
 
-This ecommerce store is a great example of how you can build a full-stack
-application with NextJs and Stripe. By integrating the Stripe API with NextJs,
-you can create a seamless shopping experience for your customers and manage
-payments securely and efficiently.
+
