--- a/content/projects/alleen-restaurant-website.mdx
+++ b/content/projects/alleen-restaurant-website.mdx
@@ -1,7 +1,7 @@
 ---
-  title: NextJs MDX Portfolio
-  summary: A portfolio website built with NextJs and MDX.
-  image: /images/projects/anita.jpeg
+  title: Oppdag ølets verden i en frodig hage! Smak på alt fra krisp pilsner til fyldige IPA-er, møt bryggere og lær om bryggekunst.
+  summary: alleen restaurant website design
+  image: /images/projects/aleen.png
   author: 'vinter achien'
   publishedAt: '2024-09-19'
 ---
