--- a/content/projects/kula-organic-app.mdx
+++ b/content/projects/kula-organic-app.mdx
@@ -1,8 +1,8 @@
 ---
-  title: NextJs MDX Portfolio
-  summary: A portfolio website built with NextJs and MDX.
-  image: /images/projects/anita.jpeg
-  author: 'vinter achien'
+  title: Kula Organic Website.Ke
+  summary: change Here
+  image: /images/projects/kula.png
+  author: 'vinter achieno'
   publishedAt: '2024-09-19'
 ---
 
