--- a/content/projects/moringa-connect-mdx.mdx
+++ b/content/projects/moringa-connect-mdx.mdx
@@ -1,13 +1,13 @@
 ---
-  title: NextJs MDX Portfolio
-  summary: A portfolio website built with NextJs and MDX.
-  image: /images/projects/anita.jpeg
+  title: Alumin App Moringa Connect
+  summary: Moringa Connect.
+  image: /images/projects/Alumin.jpeg
   author: 'vinter achien'
   publishedAt: '2024-09-19'
 ---
 
-This is a portfolio website built with NextJs and MDX. It uses the `@next/mdx`
-package to render MDX content in NextJs pages.
+This is a Alumin App built with Figma, Framer, Relume and Adobe Illustrator. It uses the `React Native for development`
+package to render MDX content in react native pages.
 
 ## Features
 
