--- a/content/projects/printable-art-work.mdx
+++ b/content/projects/printable-art-work.mdx
@@ -1,8 +1,8 @@
 ---
-  title: NextJs MDX Portfolio
-  summary: A portfolio website built with NextJs and MDX.
-  image: /images/projects/anita.jpeg
-  author: 'vinter achien'
+  title: Prinytable Art Work Studios.
+  summary: Art Studio For Printable Images
+  image: /images/projects/work.png
+  author: 'vinter achieno'
   publishedAt: '2024-09-19'
 ---
 
