--- a/content/projects/ecommerce-store.mdx
+++ b/content/projects/ecommerce-store.mdx
@@ -1,7 +1,7 @@
 ---
 title: OrderUp App  
 summary: A full-stack food pre-ordering mobile app for dine-in and takeaway customers, built with React Native and Node.js.  
-image: /images/projects/order-app-Native.png  
+image: /images/projects/order.png  
 author: 'Vinter Achieno'  
 publishedAt: '2025-03-01'  
 ---
