✅ Polished contact, counter, footer, header and contact page

--- a/content/posts/TrackerApp-to-reactnative.mdx
+++ b/content/posts/TrackerApp-to-reactnative.mdx
@@ -6,22 +6,22 @@
   publishedAt: '2025-03-18'
 ---
 
-Managing personal finances shouldn’t be complicated. That’s why we built **WalletMaster** — a simple, intuitive, and powerful **Budget Tracker App** designed to help everyday users track expenses, manage budgets, and visualize spending habits with ease.
-Whether you're a student trying to stay within your weekly budget or a working professional planning for savings goals, **WalletMaster** gives you a clear picture of your financial health — anytime, anywhere.
+Managing personal finances shouldn’t be complicated. That’s why we built WalletMaster a simple, intuitive, and powerful Budget Tracker App designed to help everyday users track expenses, manage budgets, and visualize spending habits with ease.
+Whether you're a student trying to stay within your weekly budget or a working professional planning for savings goals, WalletMaster gives you a clear picture of your financial health — anytime, anywhere.
 
 ## 🎯 Project Overview
 
-**App Version:** 1.0  
-**Platform:** Web (React-based SPA)  
-**Type:** Personal Finance & Budgeting App  
+App Version: 1.0  
+Platform: Web (React-based SPA)  
+Type: Personal Finance & Budgeting App  
 
 WalletMaster allows users to:
-- Track daily expenses in real-time
+- Track daily expenses in real time
 - Categorize and label transactions
 - Set monthly budgets and compare actual vs projected spending
 - Visualize their spending patterns through charts and reports
 
-It’s built with scalability in mind, with plans for a fully integrated backend using **Node.js** and **JWT authentication**.
+It’s built with scalability in mind, with plans for a fully integrated backend using Node.js and JWT authentication.
 
 ---
 
@@ -109,14 +109,14 @@ Anyone looking to gain better control over their personal finances:
 - **Login**, **Register**, **Forgot Password**
 
 ### Core Screens
-- **Dashboard**: Spending overview, quick add
-- **Expenses**: Full list, filter/search, manage categories
-- **Budgets**: Visual budget tracking and setup
-- **Reports**: Graphs, trends, category comparisons
+- Dashboard: Spending overview, quick add
+- Expenses: Full list, filter/search, manage categories
+- Budgets: Visual budget tracking and setup
+- Reports: Graphs, trends, category comparisons
 
 ### Supporting Screens
-- **Profile & Settings**: Customize app, notifications, currency
-- **Transaction Detail**: Deep dive into individual expense records
+- Profile & Settings: Customize app, notifications, currency
+- Transaction Detail: Deep dive into individual expense records
 
 ---
 
@@ -127,8 +127,8 @@ We're currently building out the backend integration, implementing:
 - Persistent data with MongoDB
 - API endpoints for all features
 
-**WalletMaster** is more than a tracker — it's your personal finance assistant. Stay tuned for real-time sync, mobile-friendly design, and goal-tracking features coming soon!
+WalletMaster is more than a tracker it's your personal finance assistant. Stay tuned for real-time sync, mobile-friendly design, and goal tracking features coming soon!
 
 ---
 
-> Ready to take charge of your financial future? Start with WalletMaster — simple, clear, and made for your lifestyle.
+> Ready to take charge of your financial future? Start with WalletMaster  simple, clear, and made for your lifestyle.
