Updated WalletMaster post and added Moringa Connect write-up

--- a/content/posts/FoodChap-to-mdx.mdx
+++ b/content/posts/FoodChap-to-mdx.mdx
@@ -1,69 +1,79 @@
 ---
-  title: FoodChapChap App
-  summary: How we evolved our mobile app from FoodChapChap to OrderUp  a React Native food pre-ordering platform solving the dine in and takeaway wait time problem.
-  image: /images/posts/foodapp.webp
-  author: 'Vinter Achieno'
-  publishedAt: '2024-09-18'
+title: FoodChapChap App
+summary: How we evolved our mobile app from FoodChapChap to OrderUp  a React Native food pre-ordering platform solving dine-in and takeaway wait-time frustrations.
+image: /images/posts/foodapp.webp
+author: 'Vinter Achieno'
+publishedAt: '2024-09-18'
 ---
 
-In this post, I’ll walk you through our journey of building OrderUp, a food pre-ordering app originally known as FoodChapChap. What started as a basic concept around simplifying restaurant visits has now evolved into a full-stack mobile application solving a real problem long queues, delayed food preparation, and wasted time.
+## From Idea to Impact: The Journey Behind OrderUp
 
-We rebranded to OrderUp to better reflect our product’s vision: get your food faster, with less friction, and no hassle. Our goal? Create a fast, intuitive, and reliable platform for dine-in and takeaway customers who want to skip the line, prepay, and have their meals ready upon arrival.
-
----
-
-## The Idea: Why FoodChapChap?
-
-The original idea behind FoodChapChap came from observing how much time people lose in restaurants waiting to place an order or get the bill especially during short lunch breaks. We thought:
-
-> "What if customers could place their order before leaving the office, and arrive to a ready meal  dine, enjoy, and go?"
-
-That was the seed.
+Have you ever found yourself stuck in a restaurant queue during your lunch break, watching the clock tick down? That frustration sparked our idea. What began as a simple concept — helping people save time while eating out — turned into a fully-fledged mobile app built with React Native: **OrderUp**.
 
 ---
 
-## The Evolution: Why Rebrand to OrderUp?
+## The Spark: Why We Built FoodChapChap
 
-As we built and tested the MVP, we realized that FoodChapChap was too casual and didn’t fully represent our growing vision. We wanted a name that:
-- Felt universal and action-driven
-- Was easy to remember
-- Aligned with both dine-in and takeaway services
+We noticed a recurring problem people wasting time in queues, waiting for their food, or just trying to pay. It felt unnecessary.
 
-So, OrderUp was born  a name that clearly says what we do: let customers order ahead and skip the line.
+> _"What if customers could place an order before they left the office, then simply walk in, grab their food, and go?"
+That question led to the MVP of **FoodChapChap**, a quick prototype focused on time-saving food pre-ordering.
 
 ---
 
-## What is OrderUp?
+## Why Rebrand to OrderUp?
 
-OrderUp is a mobile first food ordering platform that connects customers with restaurants, allowing them to:
-- Browse menus
+As we tested the app with real users, it became clear that the name "FoodChapChap" didn’t scale well. We needed something more professional, catchy, and universal. That’s when **OrderUp** was born — a name that:
+- Captures action and clarity
+- Aligns with both dine-in and takeaway use cases
+- Feels brandable and easy to remember
+
+---
+
+## So, What is OrderUp?
+
+OrderUp is a mobile-first food ordering platform that enables users to:
+- Browse restaurant menus
 - Pre-order meals
 - Pay in advance
-- Have food ready when they arrive
+- Have their food ready on arrival
 
-It’s not food delivery instead, we focused on a gap left by delivery apps: the everyday dine in and takeaway experience.
+Unlike delivery apps, we focus on in-store efficiency for both dine-in and takeaway.
 
 ---
 
-## Who It's For
+## Who It's Built For
 
-- Busy professionals with limited break times
-- Students trying to avoid long lunchtime queues
+- Office workers and busy professionals
+- Students avoiding canteen queues
 - Restaurants overwhelmed during peak hours
-- Admins managing menus, orders, and analytics
+- Admins managing food ops, menus, and customer orders
 
 ---
 
-## What’s Next?
+## My Role
 
-We’re continuously improving OrderUp. The next milestones include:
-- Push notifications for order status
-- Admin dashboard for restaurant partners
-- Table QR code scanning for dine-in ordering
-
-This journey has taught us a lot about product market fit, design thinking, and full-stack development in a real world context.
+As the lead product designer and frontend developer, I worked on:
+- Designing intuitive UX flows
+- Building with React Native and Expo
+- Setting up Firebase for authentication
+- Coordinating branding during the rebrand phase
 
 ---
 
-Stay tuned for our deep dive on architecture, tech stack, and challenges we faced  during the build. If you're working on a similar app idea or thinking of building for local solutions  this story is for you.
+## What’s Coming Next?
 
+We're not stopping here. Upcoming features include:
+- Push notifications for live order tracking
+- QR code table ordering for dine-in
+- Admin dashboards with analytics and reporting
+
+---
+
+## Final Thoughts
+
+Building OrderUp taught us about real-world validation, designing with users in mind, and collaborating across dev and design. If you're a dev or startup founder tackling local problems, I hope our journey gives you some clarity and motivation.
+
+Let’s keep building solutions that matter.
+
+> 💬 Got feedback or questions? [Reach out to me](mailto:Anittavinter@gmail.com)  I’d love to connect.
