--- a/content/posts/WalletMaster-app.mdx.mdx
+++ b/content/posts/WalletMaster-app.mdx.mdx
@@ -1,5 +1,5 @@
 ---
-  title: WalletMaster – Budget Tracker App Overview
+  title: WalletMaster – Budget Tracker App 
   summary: WalletMaster is a personal finance web app that empowers users to take control of their money through intuitive expense tracking, smart budgeting, and insightful analytics.
   image: /images/posts/foodapp.webp
   author: 'Vinter Achieno'
